--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <li><a class='page-scroll' href="#work">Work</a></li>
                             <li><a class='page-scroll' href="#skills">Skills</a></li>
                             <li><a class='page-scroll' href="#contact">Contact</a></li>
-                            <li><a href="assets/cv/SCHAFER_JuniorDevCV.pdf" target='_blank'>CV</a></li>
+                            <li><a href="assets/cv/SCHAFER_DevCV.pdf" target='_blank'>CV</a></li>
                         </ul>
                     </div>
                 </div>
@@ -229,7 +229,7 @@
             <div class="col-sm-6"></div>
             <div class="col-xs-12 col-sm-6 contact-form">
                 <h2 id="contact-head">Contact</h2>
-                <form>
+                <form id='contact-form'>
                     <div class="row contact">
                         <div class="form-group">
                             <input type="text" class="form-control" id="exampleInputName" name='Name' placeholder="Name" required>
@@ -262,12 +262,33 @@
                 <div class="col-xs-12 col-sm-12 icons">
                     <a href="https://www.linkedin.com/in/haleyschafer" target="_blank"><i class="fab fa-linkedin-in alignment"></i></a>
                     <a href="https://www.github.com/hschafer2017" target="_blank"><i class="fab fa-github alignment"></i></a>
-                    <a href="assets/cv/SCHAFER_JuniorDevCV.pdf" download><i class="fas fa-file-download alignment"></i></a>
+                    <a href="assets/cv/SCHAFER_DevCV.pdf" download><i class="fas fa-file-download alignment"></i></a>
                     <a href="https://medium.com/@haleyschafer" target="_blank"><i class="fab fa-medium-m alignment"></i></a>
                 </div>
             </div>
         </div>
     </footer>
+    <!-- *******CONTACT FORM MODAL******* -->
+    <div class="modal fade" tabindex="-1" role="dialog" id='contactFormModal'>
+        <br><br><br><br><br>
+        <div class="modal-dialog" role="document">
+            <br><br><br>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" style='text-align: right;' aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Contact Form</h4>
+                </div>
+                <div class="modal-body">
+                    <p class='header'> About this contact form:</p>
+                        <p>This contact form does not currently work or collect any personal information, it simply refreshes the page. Furthermore, this site does not collect any personal data. Please consult the <a class='privacy-policy' href="privacy_policy.html"> privacy policy</a> for more details.</p>
+                        
+                    <div class="modal-footer">
+                        <button class='btn btn-md btn-default' data-dismiss="modal">I Understand!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="./libraries/jquery.min.js"></script>
     <script src="./libraries/bootstrap.min.js"></script>
     <script src="assets/js/index.js"></script>
