force build update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <!--********TOP JUMBOTRON/NAVBAR=*******-->
+    <!--********TOP JUMBOTRON/NAVBAR********-->
     <header class="jumbotron" id="landing-view">
             <nav class="navbar navbar-masthead navbar-default navbar-fixed-top">
                 <div class="container">
@@ -44,7 +44,7 @@
             </div>
     </header>
 
-    <!--******-ABOUT ME*******-->
+    <!--*******ABOUT ME*******-->
     <section id="about-me">
         <div class="container about-row">
             <div class="row" id='about'>
