--- a/FR_index.html
+++ b/FR_index.html
@@ -282,7 +282,7 @@
                     </div>
                     <div class="modal-body">
                         <p class='header'> À propos de cette formulaire:</p>
-                            <p>Cette formulaire ne marche pas actuellement ou garder vos détails, elle actualise la page simplement. De plus, ce site ne garde pas des détails personnelles. Veuillez consulter le <a class='privacy-policy' href="privacy_policy.html"> la politique de confidentialité</a> pour plus de détails.</p>
+                            <p>Cette formulaire n'envoie pas de messages actuellement. De plus, ce site ne garde pas des détails personnelles. Veuillez consulter le <a class='privacy-policy' href="privacy_policy.html"> la politique de confidentialité</a> pour plus de détails.</p>
                             
                         <div class="modal-footer">
                             <button class='btn btn-md btn-default' data-dismiss="modal">Je comprends!</button>
