added updated bio to about me

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <h2>About</h2>
             </div>
             <div class="col-xs-hidden col-sm-6">
-                <p class='about-p'>I am experienced in sales and tech industry-focused client management. Transitioning into software development, I am a recent graduate of Code Institute working with front-end and back-end frameworks. </p>
+                <p class='about-p'>I am experienced in sales and tech industry-focused client management. Transitioning into software development, I am a Learning Success Software Developer at Code Institute working with front-end and back-end frameworks. </p>
                 <p class='about-p hidden-sm'>I specialise in HTML, CSS, JavaScript, and Python languages, using Django and Flask frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
             </div>
             <div class="col-xs-hidden col-sm-6">
