--- a/FR_index.html
+++ b/FR_index.html
@@ -53,7 +53,7 @@
                 <div class="row" id='about'>
                     <h2>À Propos</h2>
                     <div class="col-xs-hidden col-sm-6">
-                        <p class='about-p'>Je suis expérimentée dans le domaine de la vente et dans la gestion client dans l'industrie informatique. Orientant ma carrière vers le dévelopement de logiciel, je viens d'être diplomée du Code Institute à Dublin en front-end et back-end. Je me spécialise dans le développement d'application web.</p>
+                        <p class='about-p'>Je suis expérimentée dans le domaine de la vente et dans la gestion client dans l'industrie informatique. Orientant ma carrière vers le dévelopement de logiciel, je suis développeuse à Code Institute à Dublin en front-end et back-end. Je me spécialise dans le développement d'application web.</p>
                         <p class='about-p hidden-sm'> Je travaille avec les frameworks Flask et Django (Python), ainsi que les languages HTML, CSS et JavaScript. Passionnée par la création d'une expérience utilisateur la plus agréable possible, j'aime continuellement découvrir et m'approprier les
                             technologies les plus récentes.</p>
                     </div>
