fixed filepath to resume for custom domain

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <li><a class='page-scroll' href="#work">Work</a></li>
                             <li><a class='page-scroll' href="#skills">Skills</a></li>
                             <li><a class='page-scroll' href="#contact">Contact</a></li>
-                            <li><a href="assets/cv/SCHAFER_DevCV.pdf" target='_blank'>CV</a></li>
+                            <li><a href="https://raw.githubusercontent.com/hschafer2017/HSCHAFER-Portfolio/master/assets/cv/SCHAFER_CV.pdf" target='_blank'>CV</a></li>
                         </ul>
                     </div>
                 </div>
@@ -257,7 +257,7 @@
                 <div class="col-xs-12 col-sm-12 icons">
                     <a href="https://www.linkedin.com/in/haleyschafer" target="_blank"><i class="fab fa-linkedin-in alignment"></i></a>
                     <a href="https://www.github.com/hschafer2017" target="_blank"><i class="fab fa-github alignment"></i></a>
-                    <a href="assets/cv/SCHAFER_DevCV.pdf" download><i class="fas fa-file-download alignment"></i></a>
+                    <a href="https://raw.githubusercontent.com/hschafer2017/HSCHAFER-Portfolio/master/assets/cv/SCHAFER_CV.pdf" download><i class="fas fa-file-download alignment"></i></a>
                     <a href="https://medium.com/@haleyschafer" target="_blank"><i class="fab fa-medium-m alignment"></i></a>
                 </div>
             </div>
