updated give a gif technologies on link card
added gitignore

--- a/FR_index.html
+++ b/FR_index.html
@@ -98,7 +98,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Give A GIF</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">RESTful API, JavaScript, Flask, Python</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">RESTful API, React, Flask, Python</h6>
                         <p class="card-text">Un générateur aléatoire de GIF, utilisant un RESTful API. </p>
                         <div class="row">
                             <a href="https://hschafer2017.github.io/Give-A-GIF/" class="card-link" target="_blank"><i class="fas fa-desktop desktop-icon"></i></a>
