reformatted footer and card icon styling

--- a/FR_index.html
+++ b/FR_index.html
@@ -265,7 +265,7 @@
                     <a href="https://www.linkedin.com/in/haleyschafer" target="_blank"><i class="fab fa-linkedin-in alignment"></i></a>
                     <a href="https://www.github.com/hschafer2017" target="_blank"><i class="fab fa-github alignment"></i></a>
                     <a href="https://raw.githubusercontent.com/hschafer2017/HSCHAFER-Portfolio/master/assets/cv/SCHAFER_CV.pdf" download><i class="fas fa-file-download alignment"></i></a>
-                    <a href="https://medium.com/@haleyschafer" target="_blank"><i class="fab fa-medium-m alignment"></i></a>
+                    <!-- <a href="https://medium.com/@haleyschafer" target="_blank"><i class="fab fa-medium-m alignment"></i></a> -->
                 </div>
             </div>
         </div>
