--- a/FR_index.html
+++ b/FR_index.html
@@ -123,12 +123,12 @@
             <div class="col-xs-6 col-sm-4 project-cards">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Portfolio Site</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">HTML, CSS, Bootstrap</h6>
-                        <p class="card-text">Un site statique à presenter les projets pour les employeurs prospectifs</p>
+                        <h5 class="card-title">COVID 19 Graphs</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Semantic UI, DC.js, D3.js</h6>
+                        <p class="card-text">La visualisation des données de la pandémie mondiale de COVID-19</p>
                         <div class="row">
-                            <a href="https://hschafer2017.github.io/HSCHAFER-Portfolio/" class="card-link" target="_blank"><i class="fas fa-desktop desktop-icon"></i></a>
-                            <a href="https://github.com/hschafer2017/HSCHAFER-Portfolio" class="card-link" target="_blank"><i class="fab fa-github github-icon"></i></a>
+                            <a href="https://hschafer2017.github.io/Covid19Graphs/" class="card-link" target="_blank"><i class="fas fa-desktop desktop-icon"></i></a>
+                            <a href="https://github.com/hschafer2017/Covid19Graphs" class="card-link" target="_blank"><i class="fab fa-github github-icon"></i></a>
                         </div>
                     </div>
                 </div>
