revised about content and uploaded updated CV

--- a/FR_index.html
+++ b/FR_index.html
@@ -32,7 +32,7 @@
                         <li><a class='page-scroll' href="#work">Travail</a></li>
                         <li><a class='page-scroll' href="#skills">Compétences</a></li>
                         <li><a class='page-scroll' href="#contact">Contacter</a></li>
-                        <li><a href="https://raw.githubusercontent.com/hschafer2017/HSCHAFER-Portfolio/master/assets/cv/SCHAFER_CV.pdf" target='_blank'>CV</a></li>
+                        <li><a href="https://raw.githubusercontent.com/hschafer2017/HSCHAFER-Portfolio/master/assets/cv/SchaferCV.pdf" target='_blank'>CV</a></li>
                     </ul>
                 </div>
             </div>
@@ -53,12 +53,12 @@
                 <div class="row" id='about'>
                     <h2>À Propos</h2>
                     <div class="col-xs-hidden col-sm-6">
-                        <p class='about-p'>Je suis expérimentée dans le domaine de la vente et dans la gestion client dans l'industrie informatique. Orientant ma carrière vers le dévelopement de logiciel, je suis développeuse à Code Institute à Dublin en front-end et back-end. Je me spécialise dans le développement d'application web.</p>
-                        <p class='about-p hidden-sm'> Je travaille avec les frameworks Flask et Django (Python), ainsi que les languages HTML, CSS et JavaScript. Passionnée par la création d'une expérience utilisateur la plus agréable possible, j'aime continuellement découvrir et m'approprier les
+                        <p class='about-p'>Je suis développeuse à Code Institute à Dublin et chef de l'équipe de Learning Success. Je me spécialise dans le développement d'application web en front-end et back-end pour améliorer des systèmes logiciels, développer le contenu du cours, développer des programmes d'analyse et soutenir les progrès des étudiants.</p>
+                        <p class='about-p hidden-sm'> Je travaille avec les frameworks Flask, Django, et React, ainsi que les languages HTML, CSS, JavaScript, et Python. Passionnée par la création d'une expérience utilisateur la plus agréable possible, j'aime continuellement découvrir et m'approprier les
                             technologies les plus récentes.</p>
                     </div>
                     <div class="col-xs-hidden col-sm-6">
-                        <p class='about-p hidden-xs hidden-md hidden-lg'> Je travaille avec les frameworks Flask et Django (Python), ainsi que languages HTML, CSS et JavaScript. Passionnée par la création d'une expérience utilisateur la plus agréable possible, j'aime continuellement découvrir et m'approprier les
+                        <p class='about-p hidden-xs hidden-md hidden-lg'> Je travaille avec les frameworks Flask, Django, et Reach, ainsi que languages HTML, CSS, JavaScript et Python. Passionnée par la création d'une expérience utilisateur la plus agréable possible, j'aime continuellement découvrir et m'approprier les
                             technologies les plus récentes.</p>
                     </div>
                 </div>
@@ -264,7 +264,7 @@
                 <div class="col-xs-12 col-sm-12 icons">
                     <a href="https://www.linkedin.com/in/haleyschafer" target="_blank"><i class="fab fa-linkedin-in alignment"></i></a>
                     <a href="https://www.github.com/hschafer2017" target="_blank"><i class="fab fa-github alignment"></i></a>
-                    <a href="https://raw.githubusercontent.com/hschafer2017/HSCHAFER-Portfolio/master/assets/cv/SchaferCVApr20.pdf" download><i class="fas fa-file-download alignment"></i></a>
+                    <a href="https://raw.githubusercontent.com/hschafer2017/HSCHAFER-Portfolio/master/assets/cv/SchaferCV.pdf" download><i class="fas fa-file-download alignment"></i></a>
                 </div>
             </div>
         </div>
