--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <li><a class='page-scroll' href="#work">Work</a></li>
                             <li><a class='page-scroll' href="#skills">Skills</a></li>
                             <li><a class='page-scroll' href="#contact">Contact</a></li>
-                            <li><a href="https://raw.githubusercontent.com/hschafer2017/HSCHAFER-Portfolio/master/assets/cv/SCHAFER_CV.pdf" target='_blank'>CV</a></li>
+                            <li><a href="https://raw.githubusercontent.com/hschafer2017/HSCHAFER-Portfolio/master/assets/cv/SchaferCV.pdf" target='_blank'>CV</a></li>
                         </ul>
                     </div>
                 </div>
@@ -51,11 +51,11 @@
                 <h2>About</h2>
             </div>
             <div class="col-xs-hidden col-sm-6">
-                <p class='about-p'>I am experienced in sales and tech industry-focused client management. Transitioning into software development, I am a Learning Success Software Developer at Code Institute working with front-end and back-end frameworks. </p>
-                <p class='about-p hidden-sm'>I specialise in HTML, CSS, JavaScript, and Python languages, using Django and Flask frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
+                <p class='about-p'>I am currently a Learning Success Software Developer and the Learning Success Team Lead at Code Institute working with Front-End and Back-End technologies to improve software systems, grow lesson content, develop analytics programs, and support student progress.</p>
+                <p class='about-p hidden-sm'>I specialise in HTML, CSS, JavaScript, and Python languages, using Django, Flask, and React frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
             </div>
             <div class="col-xs-hidden col-sm-6">
-                <p class='about-p hidden-xs hidden-md hidden-lg'>I specialise in HTML, CSS, JavaScript, and Python languages, using Django and Flask frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
+                <p class='about-p hidden-xs hidden-md hidden-lg'>I specialise in HTML, CSS, JavaScript, and Python languages, using Django, Flask and React frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
             </div>
         </div>
     </section>
@@ -257,7 +257,7 @@
                 <div class="col-xs-12 col-sm-12 icons">
                     <a href="https://www.linkedin.com/in/haleyschafer" target="_blank"><i class="fab fa-linkedin-in alignment"></i></a>
                     <a href="https://www.github.com/hschafer2017" target="_blank"><i class="fab fa-github alignment"></i></a>
-                    <a href="https://raw.githubusercontent.com/hschafer2017/HSCHAFER-Portfolio/master/assets/cv/SchaferCVApr20.pdf" download><i class="fas fa-file-download alignment"></i></a>
+                    <a href="https://raw.githubusercontent.com/hschafer2017/HSCHAFER-Portfolio/master/assets/cv/SchaferCV.pdf" download><i class="fas fa-file-download alignment"></i></a>
                 </div>
             </div>
         </div>
