Update index.html to remove link that no longer works.

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 </div>
                 <div class="modal-body">
                     <p class='header'> About this contact form:</p>
-                        <p>This contact form does not currently send messages or collect any personal information. Furthermore, this site does not collect any personal data. Please consult the <a class='privacy-policy' href="privacy_policy.html"> privacy policy</a> for more details.</p>
+                        <p>This contact form does not currently send messages or collect any personal information. Furthermore, this site does not collect any personal data.</p>
                         
                     <div class="modal-footer">
                         <button class='btn btn-md btn-default' data-dismiss="modal">I Understand!</button>
